--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ bin/
 
 ### IntelliJ IDEA ###
 application.properties
+application-local.properties
+application-prod.properties
+
 .idea
 *.iws
 *.iml
